# typeonscreen

./: Cargo.toml  Makefile  README.md
resources/: typeonscreen.desktop
src/: app.rs  config.rs  listener.rs  main.rs
