[package]
name = "typeonscreen"
version = "0.1.0"
authors = ["WhizSid <whizsid@aol.com>"]
edition = "2018"
repository = "https://github.com/whizsid/typeonscreen"
homepage = "https://github.com/whizsid/typeonscreen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "0.2.4"
gtk = "0.8.1"
libappindicator = "0.5.1"
gdk = "0.12.1"
confy = "0.4.0"
serde = { version = "1.0.106", features = ["derive"] }
gdk-pixbuf ="0.8.0"